test_regress/t/t_clocking_unsup1.out
%Error-UNSUPPORTED: t/t_clocking_unsup1.v:14:26: Unsupported: Mixed input/output clocking items
   14 |        input #1 output #1step x;
      |                          ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_clocking_unsup1.v:15:8: Unsupported: 'inout' clocking items
   15 |        inout y;
      |        ^~~~~
%Error-UNSUPPORTED: t/t_clocking_unsup1.v:16:15: Unsupported: clocking event edge override
   16 |        output posedge #1 a;
      |               ^~~~~~~
%Error-UNSUPPORTED: t/t_clocking_unsup1.v:17:15: Unsupported: clocking event edge override
   17 |        output negedge #1 b;
      |               ^~~~~~~
%Error-UNSUPPORTED: t/t_clocking_unsup1.v:18:15: Unsupported: clocking event edge override
   18 |        output edge #1 b;
      |               ^~~~
%Error-UNSUPPORTED: t/t_clocking_unsup1.v:13:20: Unsupported: global clocking
   13 |    global clocking cb @(posedge clk);
      |                    ^~
%Error-UNSUPPORTED: t/t_clocking_unsup1.v:21:11: Unsupported: global clocking
   21 |    global clocking @(posedge clk);
      |           ^~~~~~~~
%Error: Exiting due to
